<resources>
    <string name="app_name">HackTX</string>
    <string name="event_name">HackTX 2017</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_thanks">No Thanks</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome_card_title">Welcome!</string>
    <string name="welcome_card_text">Enter the email address you used during registration.</string>
    <string name="welcome_email_hint">Email Address</string>
    <string name="welcome_invalid_email">Invalid email address.</string>
    <string name="welcome_card_footer">You can change this later.</string>
    <string name="welcome_expanded_date">October 28 – 29, 2017</string>
    <string name="welcome_expanded_omni">Omni Hotel</string>
    <string name="welcome_expanded_address">700 San Jacinto Blvd, Austin, TX 78701</string>
    <string name="welcome_expanded_get_directions">Get Directions</string>
    <string name="action_settings">Settings</string>
    <string name="action_slack">Slack</string>
    <string name="dialog_slack_title">Hey There!</string>
    <string name="dialog_slack_body_primary">It looks like you\'ve got Slack installed.</string>
    <string name="dialog_slack_body_secondary">If you login to the HackTX 2017 Slack, you\'ll receive notifications from #announcements.</string>
    <string name="dialog_slack_body_prompt">To avoid duplicate notifications, want to turn off notifications here?</string>
    <string name="dialog_slack_btn_turn_off">Turn off Notifications</string>
    <string name="dialog_slack_btn_no_thanks">No Thanks</string>
    <string name="dialog_slack_footer">You can always re-enable notifications within Settings.</string>
    <string name="fragment_empty_title">Unable to fetch content</string>
    <string name="fragment_empty_btn">Try Again</string>
    <string name="fragment_schedule_main_title">Schedule</string>
    <string name="fragment_announcement_title">Announcements</string>
    <string name="fragment_twitter_title">Twitter</string>
    <string name="fragment_twitter_open_in_twitter">Open in Twitter</string>
    <string name="twitter_empty_title">Unable to fetch Tweets</string>
    <string name="fragment_map_title">Map</string>
    <string name="fragment_map_reset_map">Reset Map</string>
    <string name="fragment_map_remote_map">PDF Map</string>
    <string name="fragment_map_capital_ballroom">Capital Ballroom</string>
    <string name="fragment_map_lone_star">Lone Star</string>
    <string name="fragment_map_austin">Austin</string>
    <string name="fragment_map_longhorn">Longhorn</string>
    <string name="fragment_sponsor_title">Partners</string>
    <string name="fragment_sponsor_empty_title">Unable to fetch partners</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="fragment_preferences_debug_key">debugCategory</string>
    <string name="fragment_preferences_debug">Debug</string>
    <string name="fragment_preferences_notifications">Notifications</string>
    <string name="fragment_preferences_announcements">Announcements</string>
    <string name="fragment_preferences_announcements_desc_on">Get notified of the latest HackTX announcements.</string>
    <string name="fragment_preferences_announcements_desc_off">Do not get notified of the latest HackTX announcements.</string>
    <string name="fragment_preferences_notif_shortcut">Manage Notifications</string>
    <string name="fragment_preferences_notif_shortcut_error">Unable to open settings.</string>
    <string name="fragment_preferences_about">About</string>
    <string name="fragment_preferences_about_version">Version %1$s</string>
    <string name="fragment_preferences_licenses">Open Source Licenses</string>
    <string name="event_rate_card_text">This event has concluded. Would you like to submit feedback?</string>
    <string name="event_speakers">Speakers</string>
    <string name="event_share_dialog_title">Share to</string>
    <string name="event_share_subject">HackTX 2017</string>
    <string name="event_share_body">Check out %1$s at HackTX 2017!</string>
    <string name="event_feedback_submitted">Thanks! Feedback submitted.</string>
    <string name="event_feedback_failed">Whoops! Unable to submit feedback.</string>
    <string name="event_feedback_already_submitted">Feedback already submitted.</string>
    <string name="dialog_feedback_title">Event Feedback</string>
    <string name="dialog_feedback_submit">Submit</string>
    <string name="sched_day_empty_title">Unable to fetch schedule</string>
    <string name="announce_empty_title">Unable to fetch announcements</string>
    <string name="activity_check_in_title">Check In</string>
    <string name="activity_check_in_reset">Reset</string>
    <string name="activity_check_in_done">Done</string>
    <string name="activity_check_in_code_text">Get this code scanned by a volunteer to finish.\n\nYour email is %1$s.</string>
    <string name="activity_check_in_finish_soon_text">Check back here on October 28th to get your QR code for check in.\n\nYour email is %1$s.</string>
    <string name="activity_check_in_about_you">About You</string>
    <string name="activity_check_in_enter_email">Enter the email you used during registration.</string>
    <string name="activity_check_in_email_hint">Email Address</string>
    <string name="activity_check_in_dialog_verify_title">Verify Email</string>
    <string name="activity_check_in_dialog_verify_body">Is %1$s correct?</string>
    <string name="activity_check_in_invalid_email">Invalid email address.</string>
    <string name="activity_check_in_almost_there">Almost There!</string>
    <string name="activity_check_in_welcome">Welcome to HackTX!</string>
    <string name="activity_check_in_lets_go">Let\'s get you checked in.</string>
    <string name="activity_check_in_thanks">Thanks for Attending!</string>
    <string name="activity_check_in_keep_eye_out">Keep an eye out for future HackTX events!</string>
    <string name="activity_check_in_coming_soon">HackTX is Coming Soon!</string>
    <string name="activity_check_in_get_ready">Let\'s get ready for the big day.</string>
    <string name="activity_check_in_good_to_go">You\'re good to go!</string>
    <string name="prefs_schedule_last_updated">scheduleLastUpdated</string>
    <string name="prefs_feedback_submitted">feedbackSubmitted</string>
    <string name="prefs_feedback_ignore">feedbackIgnore</string>
    <string name="prefs_debug">debug</string>
    <string name="prefs_about">about</string>
    <string name="prefs_licenses">licenses</string>
    <string name="prefs_user_email">userEmail</string>
    <string name="prefs_first_launch">firstLaunch</string>
    <string name="prefs_uuid">uuid</string>
    <string name="prefs_notif_announcements_enabled">notifAnnouncementsEnabled</string>
    <string name="prefs_notif_offset">notifOffset</string>
    <string name="prefs_network_mock">mockServer</string>
    <string name="prefs_slack_alert_shown">slackAlertShown</string>
    <string name="prefs_notif_shortcut">notifShortcut</string>
    <string name="debug_title">Debug</string>
    <string name="debug_dialog_title">Attention</string>
    <string name="debug_config">Config</string>
    <string name="debug_config_check_in_key">configCheckIn</string>
    <string name="debug_config_check_in">Check In</string>
    <string name="debug_config_feedback_key">configFeedback</string>
    <string name="debug_config_feedback">Feedback</string>
    <string name="debug_config_bundled_notif_key">configBundledNotifications</string>
    <string name="debug_config_bundled_notif">Bundled Notifications</string>
    <string name="debug_config_remote_map_key">configRemoteMap</string>
    <string name="debug_config_remote_map">Remote Map</string>
    <string name="debug_config_enabled">Enabled</string>
    <string name="debug_config_disabled">Disabled</string>
    <string name="debug_network">Network</string>
    <string name="debug_network_mock">Mock Server</string>
    <string name="debug_network_mock_on">Load from local mock server.</string>
    <string name="debug_network_mock_off">Load from configured remote server.</string>
    <string name="debug_hacktx_utils">HackTXUtils</string>
    <string name="debug_hacktx_utils_override_key">hacktxUtilsOverride</string>
    <string name="debug_hacktx_utils_override">Enable Override</string>
    <string name="debug_hacktx_utils_started_key">hacktxUtilsStarted</string>
    <string name="debug_hacktx_utils_started">HackTX Started</string>
    <string name="debug_hacktx_utils_ended_key">hacktxUtilsEnded</string>
    <string name="debug_hacktx_utils_ended">HackTX Ended</string>
    <string name="notif_new_notifications">New Notification</string>
    <string name="notif_topic_hacktx">hacktx</string>
    <string name="notif_topic_android">android</string>
    <string name="notif_topic_announcements">announcements</string>
    <string name="notif_topic_debug">debug</string>
    <string name="app_shortcut_announcements">Announcements</string>
    <string name="app_shortcut_map">Map</string>
    <string name="app_shortcut_check_in">Check-in</string>
    <string name="notif_ch_announcement_id">notif_announcement</string>
    <string name="notif_ch_announcement_title">Announcements</string>
    <string name="notif_ch_announcement_text">Important event announcements from Team HackTX.</string>
    <string name="notif_ch_debug_id">notif_debug</string>
    <string name="notif_ch_debug_title">Debug</string>
    <string name="notif_ch_debug_text">Notifications shown while debugging.</string>
    <string name="analytics_event_set_email">event_set_email</string>
    <string name="analytics_event_invalid_email">event_invalid_email</string>
    <string name="analytics_event_skip_email">event_skip_email</string>
    <string name="analytics_event_get_directions">event_get_directions</string>
    <string name="analytics_event_nav_schedule">event_nav_schedule</string>
    <string name="analytics_event_nav_announcement">event_nav_announcement</string>
    <string name="analytics_event_nav_twitter">event_nav_twitter</string>
    <string name="analytics_event_nav_map">event_nav_map</string>
    <string name="analytics_event_nav_sponsors">event_nav_sponsors</string>
    <string name="analytics_event_nav_slack">event_nav_slack</string>
    <string name="analytics_event_nav_check_in">event_nav_check_in</string>
    <string name="analytics_event_nav_settings">event_nav_settings</string>
    <string name="analytics_event_slack_dialog_show">event_slack_dialog_show</string>
    <string name="analytics_event_slack_dialog_disable_notif">event_slack_dialog_disable_notif</string>
    <string name="analytics_event_slack_dialog_no">event_slack_dialog_no</string>
    <string name="analytics_event_check_in_reset">event_check_in_reset</string>
    <string name="analytics_event_view_event">event_view_event</string>
    <string name="analytics_event_view_sponsor">event_view_sponsor</string>
    <string name="analytics_event_twitter_external">event_twitter_external</string>
    <string name="analytics_event_map">event_map</string>
    <string name="analytics_event_share">event_share</string>
    <string name="analytics_param_event_name">event_name</string>
    <string name="analytics_event_feedback_no_thanks">event_feedback_no_thanks</string>
    <string name="analytics_event_feedback_cancel">event_feedback_cancel</string>
    <string name="analytics_event_feedback_submit">event_feedback_submit</string>
    <string name="analytics_event_feedback_already_submitted">event_feedback_already_submitted</string>
    <string name="analytics_event_floor_change">event_floor_change</string>
    <string name="analytics_param_floor">floor</string>
    <string name="analytics_event_reset_map">event_reset_map</string>
    <string name="analytics_event_remote_map">event_remote_map</string>
</resources>