<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 HackTX.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/debug_config">

        <PreferenceScreen
            android:key="@string/debug_config_check_in_key"
            android:title="@string/debug_config_check_in" />

        <PreferenceScreen
            android:key="@string/debug_config_feedback_key"
            android:title="@string/debug_config_feedback" />

        <PreferenceScreen
            android:key="@string/debug_config_bundled_notif_key"
            android:title="@string/debug_config_bundled_notif" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/debug_network">

        <CheckBoxPreference
            android:key="@string/prefs_network_mock"
            android:title="@string/debug_network_mock"
            android:summaryOn="@string/debug_network_mock_on"
            android:summaryOff="@string/debug_network_mock_off"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/debug_hacktx_utils">

        <CheckBoxPreference
            android:key="@string/debug_hacktx_utils_override_key"
            android:title="@string/debug_hacktx_utils_override"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="@string/debug_hacktx_utils_started_key"
            android:title="@string/debug_hacktx_utils_started"
            android:defaultValue="false"
            android:enabled="false"/>

        <CheckBoxPreference
            android:key="@string/debug_hacktx_utils_ended_key"
            android:title="@string/debug_hacktx_utils_ended"
            android:defaultValue="false"
            android:enabled="false" />

    </PreferenceCategory>

</PreferenceScreen>