<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 HackTX.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/fragment_schedule_main_title" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_announcement"
            android:title="@string/fragment_announcement_title" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter"
            android:title="@string/fragment_twitter_title" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/fragment_maps_title" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_grade"
            android:title="@string/fragment_sponsor_title" />
    </group>

    <group android:id="@+id/group_other">
        <item
            android:id="@+id/nav_check_in"
            android:icon="@drawable/ic_check_in"
            android:title="@string/activity_check_in_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/activity_preferences_title" />
    </group>
</menu>