<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 HackTX.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context="com.hacktx.android.activities.WelcomeActivity">

    <com.hacktx.android.views.ShapesView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@color/hacktx17_orange"
        app:fabSize="normal"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"/>

    <LinearLayout
        android:id="@+id/sign_in_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:id="@+id/sign_in_card"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="24dp"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcome_card_title"
                    android:id="@+id/sign_in_card_title"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/welcome_card_text"
                    android:id="@+id/sign_in_card_text"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/welcome_email_hint"
                        android:ems="10"
                        android:id="@+id/sign_in_card_email"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="24dp"
                        android:backgroundTint="@color/hacktx17_orange"
                        android:enabled="true"
                        android:imeOptions="actionDone" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/welcome_card_footer"
                    android:id="@+id/sign_in_card_footer"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sign_in_card_expanded_content"
                    android:animateLayoutChanges="true"
                    android:layout_marginTop="8dp"
                    android:alpha="0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp">

                        <include layout="@layout/welcome_expanded_content" />

                    </LinearLayout>

                </ScrollView>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
